manifests/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: counter-request
  name: counter-request
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: counter-request-app
  name: counter-request-app
  namespace: counter-request
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-request-app
  template:
    metadata:
      labels:
        app: counter-request-app
    spec:
      containers:
        - image: docker.io/juouyang/counter-request:latest
          imagePullPolicy: Always
          name: counter-request
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 10m
              memory: 512Mi
      nodeSelector:
        kubernetes.io/arch: arm64
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: counter-request-app
  name: counter-request-app-service
  namespace: counter-request
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: counter-request-app
